# pgnlib-cpp

./: .cproject  .hgignore  .project  AUTHORS  CMakeLists.txt  CODINGSTYLE  HowToBuild.md  ProjectHome.md
3rd_parties/: CMakeLists.txt
3rd_parties/log4cplus/: CMakeLists.txt
3rd_parties/log4cplus/tests/appender_test/: CMakeLists.txt
3rd_parties/log4cplus/tests/configandwatch_test/: CMakeLists.txt
3rd_parties/log4cplus/tests/customloglevel_test/: CMakeLists.txt
3rd_parties/log4cplus/tests/fileappender_test/: CMakeLists.txt
3rd_parties/log4cplus/tests/filter_test/: CMakeLists.txt
3rd_parties/log4cplus/tests/hierarchy_test/: CMakeLists.txt
3rd_parties/log4cplus/tests/loglog_test/: CMakeLists.txt
3rd_parties/log4cplus/tests/ndc_test/: CMakeLists.txt
3rd_parties/log4cplus/tests/ostream_test/: CMakeLists.txt
3rd_parties/log4cplus/tests/patternlayout_test/: CMakeLists.txt
3rd_parties/log4cplus/tests/performance_test/: CMakeLists.txt
3rd_parties/log4cplus/tests/priority_test/: CMakeLists.txt
3rd_parties/log4cplus/tests/propertyconfig_test/: CMakeLists.txt
3rd_parties/log4cplus/tests/socket_test/: CMakeLists.txt
3rd_parties/log4cplus/tests/thread_test/: CMakeLists.txt
3rd_parties/log4cplus/tests/timeformat_test/: CMakeLists.txt
doc/: Doxyfile  PGN_highlights.txt
include/: common_decl.hpp  move.hpp  parser.hpp  ref_object.hpp
parser/: CMakeLists.txt
parser/include/pgn/: game.hpp  move.hpp  parser.hpp  ref_object.hpp
pgnparser/: CMakeLists.txt
pgnparser/include/: common_decl.hpp  export_decl.hpp  game.hpp  move.hpp  parser.hpp  ref_object.hpp
pgnparser/src/: parser_impl.cpp  parser_impl.hpp  ref_object_impl.hpp
src/: CMakeLists.txt  parser.cpp  parser_impl.hpp  ref_object_impl.hpp
tests/: CMakeLists.txt
tests/annotated_games/: README
tests/bad_tagdate/: README  test.pgn
tests/bad_tagname/: README
tests/bad_tagpair/: README  test.pgn
tests/bad_tagresult/: README  test.pgn
tests/badtagname/: test.pgn
tests/empty/: README
tests/good_tagname/: README  test.pgn
tests/good_tagpair/: README  test.pgn
tests/multi_tagvals/: README  test.pgn
tests/no_tagpair/: test.pgn
tests/notagpair/: README
tests/simple_pgn/: README
tests/tag2times/: README  test.pgn
tools/: CMakeLists.txt
tools/pgndump/: CMakeLists.txt  main.cpp
