cmake_minimum_required(VERSION 2.8)
project(PGN_PARSER)

set(PGN_PARSER_VERSION_MAJOR 0)
set(PGN_PARSER_VERSION_MINOR 1)
set(PGN_PARSER_VERSION_PATCH 0)

set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)

add_subdirectory(src)
add_subdirectory(tools)
